--- a/Counter/Base.lproj/Main.storyboard
+++ b/Counter/Base.lproj/Main.storyboard
@@ -25,8 +25,8 @@
                                     <action selector="counterButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jzT-sy-amU"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQg-Ct-xJA">
-                                <rect key="frame" x="60" y="243" width="273" height="76"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Oo-Jd-orC">
+                                <rect key="frame" x="60" y="281" width="273" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -38,7 +38,7 @@
                     </view>
                     <connections>
                         <outlet property="counterButton" destination="8Ou-He-ZTs" id="HRc-rK-FrN"/>
-                        <outlet property="counterText" destination="hQg-Ct-xJA" id="i8Z-D5-k6F"/>
+                        <outlet property="counterLabel" destination="5Oo-Jd-orC" id="Wy0-NP-uTM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
